# appa_tio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
appa/: date.py  diffusion.py  grid.py  losses.py  math.py  observations.py  optim.py  sampling.py  save.py  soap.py
appa/config/: __init__.py  hydra.py
appa/data/: const.py  dataloaders.py  datasets.py  download.py  mappings.py  transforms.py
appa/diagnostics/: const.py  plots.py  reconstruction.py  spectral.py
appa/nn/: attention.py  cae.py  gae.py  graph.py  layers.py  sptgraph.py  triggers.py  vit.py
experiments/autoencoder/: dump.py  reconstruction.py  render.py  render_gallery.py  train.py  trajectories.py
experiments/autoencoder/configs/: dump.yaml  reconstruction.yaml  render.yaml  render_gallery.yaml  train.yaml  trajectories.yaml
experiments/diffusion/: generate.py  persistence.py  train.py
experiments/observations/: evaluate.py  forecast.py  forecast_aao.py  reanalysis.py
experiments/physics/: physical_consistency.py  power_spectra.py
notebooks/: analyze_reconstruction_errors.ipynb  generate_unconditional_samples.ipynb
scripts/data/: data_stats.py  download_era5.py  ground_stations_masks.py  latent_stats.py
scripts/plots/: assimilation_metrics.py  physical_consistency.py  power_spectra.py  reconstruction_dist.py  rmse_snapshots.py  rmse_spectra.py
tests/: test_autoencoder.py  test_data_datasets.py  test_date_encoding.py  test_diffusion.py  test_grid.py  test_mappings.py  test_nn_graph.py  test_nn_sptgraph.py  test_optims.py  test_sampling.py  test_save.py
(+52 files in other folders)
