[project]
name = "appa"
version = "0.0.1"
dependencies = [
  "bottleneck==1.4.0",
  "dask==2024.6.2",
  "einops==0.8.0",
  "gcsfs==2025.5.1",
  "heavyball==1.4.3",
  "hydra-core==1.3.2",
  "h5py==3.12.1",
  "numcodecs==0.16.1",
  "numpy==1.26.3",
  "scipy==1.14.1",
  "torch==2.5.1",
  "torch_harmonics==0.7.3",
  "torchvision==0.20.1",
  "tqdm==4.66.4",
  "xarray==2025.9.0",
  "xformers==0.0.28.post3",
  "zarr==3.1.2",
]

[project.optional-dependencies]
all = [
  "cmocean==4.0.3",
  "dawgz==1.0.4",
  "jupyterlab==4.2.2",
  "ipykernel==6.29.5",
  "matplotlib==3.9.0",
  "pre-commit==3.7.1",
  "pytest==8.2.2",
  "ruff==0.4.8",
  "wandb==0.17.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99

[tool.ruff.lint]
extend-select = ["B", "I", "W"]
ignore = ["E731", "E741"]

[tool.ruff.lint.isort]
lines-between-types = 1
relative-imports-order = "closest-to-furthest"
section-order = ["future", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
preview = true

[tool.setuptools.packages.find]
include = ["appa*"]
